# meshcore-analytics

./: README.md  main.py  manage.py  pi_install.sh  pyproject.toml
api/: serializers.py  urls.py  views.py
docs/: ARCHITECTURE.md  RELATED_PROJECTS.md
max/: admin.py  asgi.py  consumers.py  models.py  radio_interface.py  scripts.py  settings.py  urls.py  views.py  wsgi.py
max/management/commands/: find_usb_radio.py  load_radio_data.py
max/migrations/: 0001_initial.py  0002_node_is_favourite.py  0003_remove_node_latitude_remove_node_longitude_and_more.py  0004_alter_node_role.py
max/static/max/css/: max.css  mesh-home.css  signal-mapper.css
max/static/max/js/: signal-mapper.js  ws-connection.js
max/templates/max/: mesh_home.html  signal_mapper.html
metro/: admin.py  asgi.py  consumers.py  models.py  radio.py  radio_interface.py  settings.py  urls.py  views.py  wsgi.py
metro/management/commands/: find_usb_radio.py  load_radio_data.py
metro/migrations/: 0001_initial.py  0002_hotspotconfig.py
metro/static/metro/css/: config.css  field-testing.css  mesh-config.css  signal-mapper.css
metro/static/metro/js/: field-testing.js  heatmap-renderer.js  hotspot-config.js  measurement-collector.js  mesh-config.js  mesh-home.js  signal-mapper.js  ws-connection.js
metro/subsystems/: __init__.py  wifi_hotspot.py
metro/templates/metro/: base.html  config_hotspot.html  config_mesh.html  field_testing.html  mesh_config.html  mesh_home.html  node_detail.html  signal_mapper.html
