[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "max"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django~=5.2",
    "djangorestframework~=3.16",
    "meshcore~=2.1",
]

[project.scripts]
web = "max.scripts:web"
tests = "max.scripts:tests"
review = "max.scripts:review"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
